[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[features]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

[dependencies]
slog = "2.7"
slog-stdlog = { version = "4.1.1", optional = true }
slog-envlogger = { version = "2.2.0", optional = true }
slog-term = { version = "2.9.0", optional = true }
async-trait = "0.1"
thiserror = "1.0"
tokio-context = { path = "../tokio-context" }
tokio = "1.20"
bytes = "1.2"

# [dev-dependencies]
# slog = "2.7"
# slog-stdlog = "4.1.1"
# slog-envlogger = "2.2.0"
# slog-term = "2.9.0"
# slog-async = "2.7.0"
# thiserror = "1.0.31"