[package]
name = "tokio-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.20", features = ["macros", "sync", "time"] }
once_cell = "1.13.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros", "sync", "time", "rt", "rt-multi-thread"] }
